<resources>
    <string name="app_name">AboutFruits</string>
    <string name="get_more_information">Get more information</string>
    <string name="nutritionsText">Nutritions (per 100g) in gramm:</string>
    <string name="genus">Genus:</string>
    <string name="family">Family:</string>
    <string name="order">Order:</string>
    <string name="carbohydrates">Carbohydrates:</string>
    <string name="protein">Protein:</string>
    <string name="fat">Fat:</string>
    <string name="calories">Calories:</string>
    <string name="sugar">Sugar:</string>
    <string name="no_connection">No connection</string>
</resources>