<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:textSize="24sp"
            tools:text="Apple" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TableRow>

                <TextView
                    android:id="@+id/genusText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/genus" />

                <TextView
                    android:id="@+id/genus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/familyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/family" />

                <TextView
                    android:id="@+id/family"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/orderText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/order" />

                <TextView
                    android:id="@+id/order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/nutritons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/nutritionsText" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/carbohydratesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/carbohydrates" />

                <TextView
                    android:id="@+id/carbohydrates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/proteinText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/protein" />

                <TextView
                    android:id="@+id/protein"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/fatText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/fat" />

                <TextView
                    android:id="@+id/fat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/caloriesText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/calories" />

                <TextView
                    android:id="@+id/calories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/sugarText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/sugar" />

                <TextView
                    android:id="@+id/sugar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </TableRow>

        </TableLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/more_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="16dp"
                android:text="@string/get_more_information" />

        </FrameLayout>

    </LinearLayout>

</ScrollView>